Fix grid gap

--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,21 @@
 }
 
 .tile {
-  height: 8rem; 
-  padding: 0.5rem;
+  height: 56px;
+  padding: 3rem 0; 
+  margin: 0;
   will-change: filter;
   background-color: rgb(255, 0, 60);
   border: 2px solid black;
-  border-radius: 5px;
+  border-radius: 1rem;
   font-size: 46px;
 }
-.tile:hover {
+/* .tile:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .tile.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 .guessed {
   background-color: rgb(68, 255, 0);
@@ -32,10 +33,10 @@
   width: 50vw;
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(120px, 1fr));
-  gap: 15px;
+  gap: 1rem;
 }
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -48,8 +49,7 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
+} */
 
 .read-the-docs {
   color: #888;
